@@ -19,6 +19,7 @@ ChangeLog
 
 [-] * Documentation clarification.
 [-] * Translations update.
+[-] * Actually install gammu-smsd-monitor.
     
 20090223 - 1.23.0
 
